polyfill info etc.

--- a/style/style.less
+++ b/style/style.less
@@ -7,8 +7,8 @@
 body { height: 100%; margin: 0; }
 
 /* Landing page */
-.jumbotron { position: relative; text-align: center; }
-.jumbotron h1 { font-size: 80px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075); }
+h1 { position: relative; text-align: center; margin-top: 1em; margin-bottom: 1em; }
+h1 { font-size: 80px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075); }
 
 .jumbotron {
   background: none;
@@ -19,10 +19,10 @@ body { height: 100%; margin: 0; }
 
 /* Responsive */
 @media (max-width: 700px) {
-  .jumbotron h1 { font-size: 60px; }
+  h1 { font-size: 60px; }
 }
 @media (max-width: 400px) {
-  .jumbotron h1 { font-size: 40px; }
+  h1 { font-size: 40px; }
 }
 
 
@@ -76,4 +76,7 @@ pre {
 }
 .small-code pre code {
   font-size: 1.2em;
+}
+.no-link, .no-link:hover {
+  text-decoration: none;
 }
