--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,8 @@ html(lang='en')
         .container
           ul.nav.navbar-nav
             li: a(href='/') Promises
+            li: a(href='/combinators') Combining Promises
+            li: a(href='/generators') Generators
             li: a(href='/implementations') Implementations
           ul.nav.navbar-nav.pull-right
             li: a(href='http://promisesaplus.com/') Spec
