Add article on more advanced promise use patterns

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html(lang='en')
         .container
           ul.nav.navbar-nav
             li: a(href='/') Promises
-            li: a(href='/combinators') Combining Promises
+            li: a(href='/patterns') Patterns
             li: a(href='/generators') Generators
             li: a(href='/implementations') Implementations
           ul.nav.navbar-nav.pull-right
