--- a/views/index.jade
+++ b/views/index.jade
@@ -145,12 +145,11 @@ block content
           Note that #[code promise.done] (used in the examples in
           this section) has not been standardised. It is supported by most
           major promise libraries though, and is usefull both as a teaching
-          aid and in production code. I recommend using it along with the following polyfill:
+          aid and in production code. I recommend using it along with the following polyfill (#[a(href="/polyfills/promise-done-1.0.0.js") link]):
 
-        a.no-link.small-code(href="/polyfills/promise-done-1.0.0.js")
+        .small-code
           :html
             <script src="http://promisejs.org/polyfills/promise-done-1.0.0.js"></script>
-
     h2#then Transformation / Chaining
 
     p.
@@ -196,16 +195,17 @@ block content
     p.
       Promises are currently only supported by a pretty small selection of browsers
       (#[a(href="http://kangax.github.io/es5-compat-table/es6/#Promise") see kangax compatability tables]).
-      The good news is that they're extremely easy to polyfill:
-    a.no-link.small-code(href="/polyfills/promise-" + versions.promise + ".js")
+      The good news is that they're extremely easy to polyfill (#[a(href="/polyfills/promise-" + versions.promise + ".js") link]):
+    .small-code(href="/polyfills/promise-" + versions.promise + ".js")
       :html
         <script src="http://promisejs.org/polyfills/promise-#{versions.promise}.js"></script>
+    
     p.
       None of the browsers currently support #[code Promise.prototype.done]
       so if you want to use that feature, and you are not including the
-      polyfill above, you must at least include this polyfill:
+      polyfill above, you must at least include this polyfill (#[a(href="/polyfills/promise-done-1.0.0.js") link]):
 
-    a.no-link.small-code(href="/polyfills/promise-done-1.0.0.js")
+    .small-code
       :html
         <script src="http://promisejs.org/polyfills/promise-done-1.0.0.js"></script>
 
@@ -213,14 +213,14 @@ block content
     
     p It's generally not seen as good practise to polyfill things in node.js. Instead, you're better off just requiring the library wherever you need it.
     
-    p To install "promise" run:
+    p To install #[a(href="https://github.com/then/promise") promise] run:
 
-    a.no-link.small-code(href="https://github.com/then/promise")
+    .small-code
       pre: code npm install promise --save
 
     p Then you can load it into a local variable using "require"
 
-    a.no-link.small-code(href="https://github.com/then/promise")
+    .small-code
       :js
         var Promise = require('promise');
 
