--- a/style/style.less
+++ b/style/style.less
@@ -7,7 +7,9 @@
 body { height: 100%; margin: 0; }
 
 /* Landing page */
-h1 { position: relative; text-align: center; margin-top: 1em; margin-bottom: 1em; }
+.title {
+  position: relative; text-align: center; margin-top: 1em; margin-bottom: 1em;
+}
 h1 { font-size: 80px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075); }
 
 .jumbotron {
