--- a/views/generators.jade
+++ b/views/generators.jade
@@ -2,7 +2,9 @@ extends ./layout
 
 block content
   .container
-    h1 Generators
+    .title
+      h1 Generators
+      small by Forbes Lindesay
 
     h2#intro Introduction
     p.
