--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,9 @@ block scripts
 
 block content
   .container
-    h1 Promises
+    .title
+      h1 Promises
+      small by Forbes Lindesay
     h2#motivation Motivation
 
     p.
