--- a/views/patterns.jade
+++ b/views/patterns.jade
@@ -2,7 +2,9 @@ extends ./layout
 
 block content
   .container
-    h1 Patterns
+    .title
+      h1 Patterns
+      small by Forbes Lindesay
 
     h2#intro Introduction
 
