Fixed primitive mis-spelling

--- a/views/index.jade
+++ b/views/index.jade
@@ -232,4 +232,6 @@ block content
         function readJSON(filename, callback){
           // If a callback is provided, call it with error as the first argument
           // and result as the second argument, then return `undefined`.
-          // If no c
+          // If no callback is provided, just return the promise.
+          return readFile(filename, 'utf8').then(JSON.parse).nodeify(callback);
+        }
