--- a/views/index.jade
+++ b/views/index.jade
@@ -147,7 +147,7 @@ block content
 
         .small-code
           :html
-            <script src="http://promisejs.org/polyfills/promise-done-1.0.0.js"></script>
+            <script src="https://www.promisejs.org/polyfills/promise-done-1.0.0.js"></script>
     h2#then Transformation / Chaining
 
     p.
@@ -196,7 +196,7 @@ block content
       The good news is that they're extremely easy to polyfill (#[a(href="/polyfills/promise-" + versions.promise + ".js") link]):
     .small-code(href="/polyfills/promise-" + versions.promise + ".js")
       :html
-        <script src="http://promisejs.org/polyfills/promise-#{versions.promise}.js"></script>
+        <script src="https://www.promisejs.org/polyfills/promise-#{versions.promise}.js"></script>
     
     p.
       None of the browsers currently support #[code Promise.prototype.done]
@@ -205,7 +205,7 @@ block content
 
     .small-code
       :html
-        <script src="http://promisejs.org/polyfills/promise-done-1.0.0.js"></script>
+        <script src="https://www.promisejs.org/polyfills/promise-done-1.0.0.js"></script>
 
     h3 Node.js
     
