Use full stops in the list consistently

--- a/views/index.jade
+++ b/views/index.jade
@@ -73,7 +73,7 @@ block content
       three different states:
 
     ul
-      li pending - The initial state of a promise
+      li pending - The initial state of a promise.
       li fulfilled - The state of a promise representing a successful operation.
       li rejected - The state of a promise representing a failed operation.
 
