Remove extra "l" from "usefull"

--- a/views/index.jade
+++ b/views/index.jade
@@ -142,7 +142,7 @@ block content
         p.
           Note that #[code promise.done] (used in the examples in
           this section) has not been standardised. It is supported by most
-          major promise libraries though, and is usefull both as a teaching
+          major promise libraries though, and is useful both as a teaching
           aid and in production code. I recommend using it along with the following polyfill (#[a(href="/polyfills/promise-done-1.0.0.js") link]):
 
         .small-code
