Fix chainging -> chaining

--- a/views/index.jade
+++ b/views/index.jade
@@ -155,7 +155,7 @@ block content
       the promise via another operation. In our case, this second operation
       is synchronous, but it might just as easilly have been an asynchronous
       operation. Fortunately, promises have a (fully standardised, see
-      warning re jQuery) method for transforming promises and chainging
+      warning re jQuery) method for transforming promises and chaining
       operations.
     p.
       Put simply, #[code .then] is to #[code .done] as
