Use "practice" when it's a noun

--- a/views/index.jade
+++ b/views/index.jade
@@ -209,7 +209,7 @@ block content
 
     h3 Node.js
     
-    p It's generally not seen as good practise to polyfill things in node.js. Instead, you're better off just requiring the library wherever you need it.
+    p It's generally not seen as good practice to polyfill things in node.js. Instead, you're better off just requiring the library wherever you need it.
     
     p To install #[a(href="https://github.com/then/promise") promise] run:
 
