--- a/views/index.jade
+++ b/views/index.jade
@@ -93,7 +93,7 @@ block content
         return new Promise(function (fulfill, reject){
           fs.readFile(filename, enc, function (err, res){
             if (err) reject(err);
-            else fullfill(res);
+            else fulfill(res);
           });
         });
       }
