--- a/views/index.jade
+++ b/views/index.jade
@@ -78,7 +78,7 @@ block content
       li rejected - The state of a promise representing a failed operation.
 
     p.
-      Once a promise is fulfilled or rejected, it is imutable (i.e. it can
+      Once a promise is fulfilled or rejected, it is immutable (i.e. it can
       never change again).
 
     h2#construction Constructing a promise
