--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html(lang='en')
             li: a(href='/') Promises
             li: a(href='/patterns') Patterns
             li: a(href='/generators') Generators
+            li: a(href='/implementing') Implementing
           ul.nav.navbar-nav.pull-right
             li: a(href='http://promisesaplus.com/') Spec
       block content
@@ -29,7 +30,7 @@ html(lang='en')
           a.jepso(href='http://promisesaplus.com/') Promises/A+
           |  organisation
         p
-          | Can you make this better?  Please fork it on 
+          | Can you make this better?  Please fork it on
           a.jepso(href='https://github.com/ForbesLindesay/promisejs.org') GitHub
     block scripts
     script.
