Fix link and release 2.0.10

--- a/views/generators.jade
+++ b/views/generators.jade
@@ -155,7 +155,7 @@ block content
 
     ul
       li
-        a(href="/https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/function*") MDN
+        a(href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/function*") MDN
         |  - The mozilla developer network has great documentation on generators.
       li
         a(href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise") MDN
