--- a/views/generators.jade
+++ b/views/generators.jade
@@ -42,7 +42,7 @@ block content
     p.
       The reason this is so exciting, is that we can exploit the ability to pause a function in order
       to help us write aysynchronous code. Specifically, this will alow us to do asynchronous things
-      inside our existing controll flow structures, such as loops, conditionals and try/catch blocks.
+      inside our existing control flow structures, such as loops, conditionals and try/catch blocks.
     p.
       What generators do #[strong not] do is give us a way of representing the result of an asynchronous
       operation. For that, we need a promise.
